[tool.poetry]
name = "passgen"
version = "2.2.1"
description = "A simple service for generating passwords with guaranteed presence of uppercase and lowercase letters, numbers and special characters."
authors = ["Dmitrii Zakharov <dmitrii@zakharov.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.1"
aiohttp_cors = "0.7.0"
gunicorn = "20.1.0"
certifi = "2021.10.8"
Babel = "2.9.1"

[tool.poetry.dev-dependencies]
pytest-aiohttp = "0.3.0"
aiohttp-devtools = "0.13.1"
pytest-cov = "3.0.0"
coveralls = "3.3.1"
flake8 = "4.0.1"
pytest = "6.2.5"
black = "20.8b1"
isort = "5.10.1"
bandit = "1.7.1"
safety = "1.10.3"
mypy = "0.910"
pydocstyle = "6.1.1"

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
